--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
-	<version>0.1-SNAPSHOT</version>
 	<name>NeuroML2 info extractor</name>
 	<url>https://neuroml.org/</url>
+
+	<artifactId>neuroml2-info-extractor</artifactId>
+	<groupId>org.neuroml2.export.info</groupId>
+	<version>0.1-SNAPSHOT</version>
 
 	<repositories>
 		<repository>
@@ -12,6 +15,8 @@
 		    <url>https://jitpack.io</url>
 		</repository>
 	</repositories>
+
+	<pluginRepositories></pluginRepositories>
 
 	<dependencies>
 		<dependency>
@@ -21,13 +26,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.borismarin</groupId>
-			<artifactId>neuroml2model</artifactId>
-			<version>-SNAPSHOT</version>
+			<artifactId>neuroml2-model</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
-	<artifactId>neuroml2-info-extractor</artifactId>
-	<groupId>org.neuroml2.export.info</groupId>
-	<pluginRepositories></pluginRepositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -40,7 +42,7 @@
 						</goals>
 						<configuration>
 							<resourceBundles>
-								<resourcebundle>org.neuroml2.model:neuroml2-model:${project.version}</resourcebundle>
+								<resourcebundle>com.github.borismarin:neuroml2-model:0.0.1</resourcebundle>
 							</resourceBundles>
 						</configuration>
 					</execution>
